# DraftDoctor

./: .dockerignore  .eslintrc.cjs  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: lint.yml
api/: urls.py  views.py
draft_doctor/: asgi.py  settings.py  urls.py  wsgi.py
draft_doctor/settings/: base.py  local.py  production.py
frontend/: package.json
frontend/src/: App.tsx  main.tsx
frontend/src/atoms/: document.ts
frontend/src/components/: EditorArea.tsx  ErrorCheckResultItem.tsx  MessageArea.tsx  Sidebar.tsx  ToolArea.tsx
frontend/src/components/common/: ToolButton.tsx
frontend/src/config/: axios.ts
frontend/src/types/: errorCheck.ts
middleware/nginx/: django.conf
scripts/: entrypoint.sh
templates/: index.html
